Q1：默认参数修复效果/GenProg4Java/Codec/8b/genprog4java/logSeed5.txt
0 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
20 [main] DEBUG clegoues.genprog4java.fitness.Fitness  - parsing granularity, value: class
#Wed Feb 10 01:52:43 CST 2021
negativeTestWeight=2.0
classSourceFolder=/home/rtx/repair/d4j/Codec/8b/target/classes
model=default
sampleStrategy=variant
srcClassPath=/home/rtx/repair/d4j/Codec/8b/target/classes
sourceVersion=1.8
popsize=40
regenPaths=false
posCoverageFile=coverage.path.pos
continue=false
edits=APPEND;DELETE;REPLACE
negCoverageFile=coverage.path.neg
workingDir=/home/rtx/repair/d4j/Codec/8b/
clearTestCache=false
skipFailedSanity=false
sample=0.1 
oracleGenome=
testGranularity=class
justTestingFaultLoc=false
faultLocStrategy=standardPathFile
crossp=0.5
pMutation=1
generations=10
positiveTests=/home/rtx/repair/d4j/Codec/8b/pos.tests
javaVM=/home/rtx/java/jdk1.8.0_271/jre/bin/java
seed=5
negativePathWeight=0.35
compileCommand=
fixStrategy=classScope
allowCoverageFail=false
targetClassName=/home/rtx/repair/d4j/Codec/8b/bugfiles.txt
javaRuntime=java.lang.Runtime@6576fe71
classTestFolder=
modelPath=OVERALLModel.txt
sanity=yes
positivePathWeight=0.65
jacocoPath=/home/rtx/eclipse-workspace/genprog4java/lib/jacocoagent.jar
negativeTests=/home/rtx/repair/d4j/Codec/8b/neg.tests
pathToFileHumanInjectedFaultLoc=fileHumanInjectedFaultLoc.txt
outputDir=/home/rtx/repair/d4j/Codec/8b/genprog4java/variantSeed5/
testClassPath=/home/rtx/repair/d4j/Codec/8b/target/classes\:/home/rtx/repair/d4j/Codec/8b/target/tests\:/home/rtx/repair/defects4j/framework/projects/lib/junit-4.11.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar
faultStrategy=classScope
sourceDir=src/java
checkSpace=false
search=gp
globalExtension=.java
faultSpaceSubSet=1/5
maxVariants=50
libs=/home/rtx/eclipse-workspace/genprog4java/lib/junittestrunner.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/commons-cli-20040117.000000.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/junit-4.12.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/hamcrest-core-1.3.jar\:/home/rtx/eclipse-workspace/genprog4java/lib/log4j-1.2.17.jar\:/home/rtx/repair/d4j/Codec/8b/target/classes\:/home/rtx/repair/d4j/Codec/8b/target/tests\:/home/rtx/repair/defects4j/framework/projects/lib/junit-4.11.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/junit/junit/4.12/junit-4.12.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.4/commons-lang3-3.4.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/apache/commons/commons-lang3/3.8.1/commons-lang3-3.8.1.jar\:/home/rtx/repair/defects4j/framework/projects/Codec/lib/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\:/home/rtx/repair/d4j/Codec/8b/target/classes
crossover=onepoint
101 [main] INFO clegoues.genprog4java.main.Main  - Configuration file loaded
Deserialized fitnessCache HashMap
17935 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - loaded from source clegoues.genprog4java.java.ClassInfo@9dded4eb
34182 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - loaded from source clegoues.genprog4java.java.ClassInfo@16b99277
34182 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking begins
34914 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 1 out of 4
35163 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

35163 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 2 out of 4
35531 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

35532 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 3 out of 4
35762 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

35762 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - Checking test number 4 out of 4
35963 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - true (1)

35963 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - 	n1: 
36235 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - false (0)

36236 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - sanity checking completed (time taken = 2054)
36236 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Start Fault Localization
36270 [main] INFO clegoues.genprog4java.localization.DefaultLocalization  - Finish Fault Localization
36271 [main] INFO clegoues.genprog4java.Search.Search  - search: genetic algorithm begins

36460 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 original (stored at: )
36837 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtDelete(159) (stored at: variant0)
36956 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/codec/binary/Base64.java:858: error: non-static variable lineSeparator cannot be referenced from a static context
			System.arraycopy(lineSeparator, 0, buffer, pos, lineSeparator.length);
			                 ^
org/apache/commons/codec/binary/Base64.java:858: error: non-static variable buffer cannot be referenced from a static context
			System.arraycopy(lineSeparator, 0, buffer, pos, lineSeparator.length);
			                                   ^
org/apache/commons/codec/binary/Base64.java:858: error: non-static variable pos cannot be referenced from a static context
			System.arraycopy(lineSeparator, 0, buffer, pos, lineSeparator.length);
			                                           ^
org/apache/commons/codec/binary/Base64.java:858: error: non-static variable lineSeparator cannot be referenced from a static context
			System.arraycopy(lineSeparator, 0, buffer, pos, lineSeparator.length);
			                                                ^
4 errors

36956 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtAppend(240,113) at variant1 fails to compile

36956 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtAppend(240,113) (stored at: variant1)
37303 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(80,152) (stored at: variant2)
37398 [main] ERROR clegoues.genprog4java.rep.JavaRepresentation  - org/apache/commons/codec/binary/Base64.java:468: error: unreachable statement
                    buffer[pos++] = encodeTable[(x >> 4) & MASK_6BITS];
                    ^
1 error

37398 [main] INFO clegoues.genprog4java.rep.CachingRepresentation  - StmtReplace(80,236) at variant3 fails to compile

37398 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(80,236) (stored at: variant3)
37790 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 0.0 StmtReplace(129,152) (stored at: variant4)
39216 [main] INFO clegoues.genprog4java.fitness.Fitness  - 	 gen: 0 12.0 StmtAppend(98,67) (stored at: variant5)
39217 [main] INFO clegoues.genprog4java.Search.Search  - 
Repair Found: StmtAppend(98,67) (in variant5)

39245 [main] INFO clegoues.genprog4java.fitness.Fitness  - Serialized test cache to file testcache.ser
39245 [main] INFO clegoues.genprog4java.main.Main  - 
Total elapsed time: 39

